# secshare

./: README.md
airflow-local/: .gitignore  README.md  docker-compose.yml  requirements.txt
airflow-local/dags/: airflow_knmi_pipeline.py  airflow_message_emitter.py  knmi_dag_factory.py
secshare/: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  QUICKSTART.md  RAILWAY_CLI.md  README.md  STRIPE_SETUP.md  docker-compose.yml  package.json  railway.json  setup.sh  turbo.json
secshare/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
secshare/backend/alembic/: env.py
secshare/backend/alembic/versions/: 4eefbdbe3f29_initial_migration.py
secshare/backend/app/: main.py
secshare/backend/app/api/: deps.py
secshare/backend/app/api/v1/: router.py
secshare/backend/app/api/v1/endpoints/: auth.py  secrets.py  subscriptions.py  teams.py
secshare/backend/app/core/: config.py  security.py
secshare/backend/app/models/: __init__.py  access_log.py  secret.py  subscription.py  team.py  usage_stats.py  user.py
secshare/backend/app/schemas/: secret.py  subscription.py  user.py
secshare/frontend/: .env.production  Dockerfile  index.html  package.json  tailwind.config.js
secshare/frontend/src/: App.tsx
secshare/frontend/src/components/: Layout.tsx
secshare/frontend/src/lib/: api.ts
secshare/frontend/src/pages/: Billing.tsx  CreateSecret.tsx  Dashboard.tsx  Login.tsx  Register.tsx  SecretLogs.tsx  ViewSecret.tsx
secshare/frontend/src/store/: auth.ts
